--- a/health_parent/health_backend/pom.xml
+++ b/health_parent/health_backend/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.mjl</groupId>
+    <groupId>com.bw</groupId>
     <artifactId>health_parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -9,12 +9,12 @@
   <packaging>war</packaging>
   <dependencies>
   	<dependency>
-  		<groupId>com.mjl</groupId>
+  		<groupId>com.bw</groupId>
   		<artifactId>health_interface</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   	<dependency>
-  		<groupId>com.mjl</groupId>
+  		<groupId>com.bw</groupId>
   		<artifactId>health_pojo</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
